--- a/Bootstrap/Linkedin-Clone/Csss.css
+++ b/Bootstrap/Linkedin-Clone/Csss.css
@@ -5,9 +5,39 @@
     font-family: 'Poppins';
 }
 
-.logo{
-    width: 26px;
-    height: 26px;
-    border-radius: 5px;
+body{
+    background-color: #f3f2ef;
 }
+
+.logo{
+    width: 35px;
+    height: 35px;
+    border-radius: 5px;
+    margin-top: 9px;
+}
+
+.top-navbar{
+    width: 100%;
+    height: 71px;
+   
+}
+
+.nav-bar{
+    margin-left: 180px;
+    
+}
+
+.icon{
+    font-size: 15px;
+}
+
+p{
+    font-size: 12px;
+}
+
+.card-footer{
+    background-color: rgba(0,0,0,.05);
+    font-size: 12px;
+}
+
 
