--- a/Bootstrap/Linkedin-Clone/Csss.css
+++ b/Bootstrap/Linkedin-Clone/Csss.css
@@ -49,6 +49,9 @@ p{
     border: none;
     
 }
+.button2{
+    margin-right: 15px;
+}
 
 .icon1{
     color: #378fe9;
@@ -83,5 +86,6 @@ p{
     width: 400px;
     height: 50px;
 }
+
 
 
